Modernize ocaml-wasmtime: upgrade to wasmtime v41, OCaml 5.2, drop JaneStreet deps
  - Upgrade C API bindings from wasmtime v0.22 to v41 (store/context model,
    value-type structs, engine-based linker, new WASI config flow)
  - Drop JaneStreet dependencies (base, stdio, ppx_expect) in favor of OCaml stdlib
  - Support macOS aarch64 in addition to x86_64
  - Replace ppx_expect inline tests with standalone test executables
  - Add download script for wasmtime C API
  - Update dune-project to lang 3.0, require OCaml >= 5.0, ctypes >= 0.23.0

--- a/tests/dune
+++ b/tests/dune
@@ -1,5 +1,3 @@
-(library
- (name wasmtime_tests)
- (inline_tests)
- (libraries base wasmtime stdio)
- (preprocess (pps ppx_expect)))
+(tests
+ (names gcd hello memory wasi linker multi)
+ (libraries wasmtime))
