--- a/src/wrapper/dune
+++ b/src/wrapper/dune
@@ -1,9 +1,9 @@
 (library
   (name wasmtime)
   (public_name wasmtime)
-  (foreign_stubs (language c) (names wasmtime_stubs) (flags :standard  (:include c_flags.sexp)))
-  (c_library_flags :standard (:include c_library_flags.sexp) -lpthread -lm -ldl)
-  (libraries base bigarray ctypes ctypes.foreign ctypes.stubs stdio))
+  (foreign_stubs (language c) (names wasmtime_stubs) (flags :standard -Wno-incompatible-function-pointer-types (:include c_flags.sexp)))
+  (c_library_flags (:include c_library_flags.sexp))
+  (libraries bigarray ctypes ctypes.foreign ctypes.stubs))
 
 (rule
   (targets c_flags.sexp c_library_flags.sexp)
