--- a/wasmtime.opam
+++ b/wasmtime.opam
@@ -8,7 +8,10 @@ authors:      [ "Laurent Mazare" ]
 
 version: "dev"
 
-build: [["dune" "build" "-p" name "-j" jobs]]
+build: [
+  ["bash" "scripts/download_wasmtime.sh"]
+  ["dune" "build" "-p" name "-j" jobs]
+]
 
 run-test: [
   ["dune" "runtest" "-p" name "-j" jobs]
