--- a/wasmtime.opam
+++ b/wasmtime.opam
@@ -14,6 +14,15 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 
+install: [
+  ["mkdir" "-p" "%{lib}%/libwasmtime"] {os != "win32"}
+  ["cp" "-r" "wasmtime-c-api/lib" "%{lib}%/libwasmtime/"] {os != "win32"}
+  ["cp" "-r" "wasmtime-c-api/include" "%{lib}%/libwasmtime/"] {os != "win32"}
+  ["mkdir" "%{lib}%\\libwasmtime"] {os = "win32"}
+  ["xcopy" "/E" "/Y" "/I" "wasmtime-c-api\\lib" "%{lib}%\\libwasmtime\\lib"] {os = "win32"}
+  ["xcopy" "/E" "/Y" "/I" "wasmtime-c-api\\include" "%{lib}%\\libwasmtime\\include"] {os = "win32"}
+]
+
 run-test: [
   ["dune" "runtest" "-p" name "-j" jobs]
 ]
