Factor out wasmtime lib into libwasmtime

--- a/src/wrapper/dune
+++ b/src/wrapper/dune
@@ -7,8 +7,8 @@
 
 (rule
   (targets c_flags.sexp c_library_flags.sexp)
-  (deps    (:discover ../config/discover.exe) (source_tree ../../wasmtime-c-api))
-  (action  (run %{discover} --wasmtime-dir ../../wasmtime-c-api)))
+  (deps    (:discover ../config/discover.exe))
+  (action  (run %{discover})))
 
 (rule
   (targets bindings.ml)
