--- a/libwasmtime.opam
+++ b/libwasmtime.opam
@@ -29,6 +29,15 @@ depends: [
   "ocaml"
 ]
 
+depexts: [
+  ["xz"] {os-family = "alpine"}
+  ["xz-utils"] {os-family = "debian"}
+  ["xz"] {os-family = "rhel"}
+  ["xz"] {os-family = "fedora"}
+  ["xz"] {os-family = "suse"}
+  ["xz"] {os-family = "arch"}
+]
+
 available: (arch = "x86_64" | arch = "arm64") & (os = "linux" | os = "macos" | os = "win32")
 
 extra-source "wasmtime-c-api-arm64-macos.tar.xz" {
