--- a/src/wrapper/dune
+++ b/src/wrapper/dune
@@ -1,9 +1,9 @@
 (library
   (name wasmtime)
   (public_name wasmtime)
-  (foreign_stubs (language c) (names wasmtime_stubs wasi_capture) (flags :standard -Wno-incompatible-pointer-types (:include c_flags.sexp)))
+  (foreign_stubs (language c) (names wasmtime_stubs wasi_capture wasmtime_callback) (flags :standard -Wno-incompatible-pointer-types (:include c_flags.sexp)))
   (c_library_flags (:include c_library_flags.sexp))
-  (libraries bigarray ctypes ctypes.foreign ctypes.stubs))
+  (libraries bigarray ctypes ctypes.stubs))
 
 (rule
   (targets c_flags.sexp c_library_flags.sexp)
