--- a/tests/dune
+++ b/tests/dune
@@ -1,3 +1,3 @@
 (tests
- (names gcd hello memory wasi wasi_pipe linker multi)
+ (names gcd hello memory wasi wasi_pipe linker multi exports)
  (libraries wasmtime))
